[gd_scene load_steps=3 format=2]

[ext_resource path="res://SISTEMA/OBJETOS/SPAWN-POINT/SpawnPoint.gd" type="Script" id=1]
[ext_resource path="res://SISTEMA/GLOBAL/AREAS/AreaVisibilidadAjustable.tscn" type="PackedScene" id=2]

[node name="SpawnPoint" type="Node2D"]
script = ExtResource( 1 )

[node name="AreaVisibilidadAjustable" parent="." instance=ExtResource( 2 )]
desactivar_phisics = true
desactivar_process = true
desactivar_inputs = true
nodos_a_procesar = [ NodePath("..") ]

[node name="ZONAS_SPAWN" type="Node2D" parent="."]

[node name="Position2D" type="Position2D" parent="ZONAS_SPAWN"]
position = Vector2( 0, -10 )

[node name="Label" type="Label" parent="."]
margin_left = -10.0
margin_top = -32.0
margin_right = 30.0
margin_bottom = -18.0

[connection signal="NodoEsDestruido" from="." to="." method="_on_SpawnPoint_NodoEsDestruido"]
[connection signal="screen_entered" from="AreaVisibilidadAjustable" to="." method="_on_AreaVisibilidadAjustable_screen_entered"]
[connection signal="screen_exited" from="AreaVisibilidadAjustable" to="." method="_on_AreaVisibilidadAjustable_screen_exited"]
